<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/title_label"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_margin="10sp"
        android:text="@string/title_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/title_editor"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_margin="10sp"
        android:text="@string/default_value"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/title_label"/>


    <TextView
        android:id="@+id/short_description_label"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_margin="10sp"
        android:text="@string/short_description_label"
        app:layout_constraintTop_toBottomOf="@id/title_editor"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/short_description_editor"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_margin="10sp"
        android:text="@string/default_value"
        app:layout_constraintTop_toBottomOf="@id/title_editor"
        app:layout_constraintLeft_toRightOf="@id/short_description_label"/>

    <TextView
        android:id="@+id/default_address_label"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_margin="10sp"
        android:text="@string/default_address_label"
        app:layout_constraintTop_toBottomOf="@id/short_description_editor"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/address_editor"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_margin="10sp"
        android:text="@string/default_value"
        app:layout_constraintTop_toBottomOf="@id/short_description_editor"
        app:layout_constraintLeft_toRightOf="@id/default_address_label"
        />

    <TextView
        android:id="@+id/default_area_label"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_margin="10sp"
        android:text="@string/default_area_label"
        app:layout_constraintTop_toBottomOf="@id/address_editor"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/area_editor"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_margin="10sp"
        android:text="@string/default_value"
        app:layout_constraintTop_toBottomOf="@id/address_editor"
        app:layout_constraintLeft_toRightOf="@id/default_area_label"/>

    <TextView
        android:id="@+id/cost_label"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_margin="10sp"
        android:text="@string/cost_label"
        app:layout_constraintTop_toBottomOf="@id/area_editor"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/cost_editor"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_margin="10sp"
        android:text="@string/default_value"
        app:layout_constraintTop_toBottomOf="@id/area_editor"
        app:layout_constraintLeft_toRightOf="@id/cost_label"
        />

    <TextView
        android:id="@+id/rent_label"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_margin="10sp"
        android:text="@string/rent_label"
        app:layout_constraintTop_toBottomOf="@id/cost_editor"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/rent_editor"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_margin="10sp"
        android:text="@string/default_value"
        app:layout_constraintTop_toBottomOf="@id/cost_editor"
        app:layout_constraintLeft_toRightOf="@id/rent_label"/>

    <TextView
        android:id="@+id/owner_name_label"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_margin="10sp"
        android:text="@string/owner_name_label"
        app:layout_constraintTop_toBottomOf="@id/rent_editor"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/owner_name_editor"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_margin="10sp"
        android:text="@string/default_value"
        app:layout_constraintTop_toBottomOf="@id/rent_editor"
        app:layout_constraintLeft_toRightOf="@id/owner_name_label"/>

    <TextView
        android:id="@+id/description_label"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_margin="10sp"
        android:text="@string/description"
        app:layout_constraintTop_toBottomOf="@id/owner_name_editor"
        app:layout_constraintLeft_toLeftOf="parent"/>


    <EditText
        android:id="@+id/description_editor"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_margin="10sp"
        android:text="@string/default_value"
        app:layout_constraintTop_toBottomOf="@id/owner_name_editor"
        app:layout_constraintLeft_toRightOf="@id/description_label"/>

    <Button
        android:id="@+id/save_changes"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_margin="10sp"
        android:text="@string/save_changes"
        app:layout_constraintTop_toBottomOf="@id/description_editor"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/delete_changes"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_margin="10sp"
        android:text="@string/delete_unit"
        app:layout_constraintTop_toBottomOf="@id/description_editor"
        app:layout_constraintLeft_toRightOf="@id/save_changes"/>

    <Button
        android:id="@+id/go_to_list"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_margin="10sp"
        android:text="@string/go_to_list"
        app:layout_constraintTop_toBottomOf="@id/delete_changes"
        app:layout_constraintLeft_toLeftOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>